<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- activity titles -->
    <string name="app_name">Split Pea</string>
    <string name="title_activity_main">Party Summary</string>
    <string name="title_activity_allocate">Breakdown</string>
    <string name="title_activity_detail">Details</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- instructions for initial Totals activity -->
    <string name="instructions">Enter subtotal, tax and tip. Then add deatils for each person.</string>

    <!-- label for detailed item -->
    <string name="detail_item">Item</string>

    <!-- label for detailed item default amount-->
    <string name="detail_item_default">25.00</string>

    <!-- label for subtotal -->
    <string name="subtotal">Subtotal</string>

    <!-- default hint value for subtotal -->
    <string name="subtotal_hint_value">$25.00</string>

    <!-- label for tax -->
    <string name="tax">Tax</string>

    <!-- label for tax default % -->
    <string name="tax_default">$2.50</string>

    <!-- label for tip -->
    <string name="tip">Tip</string>

    <!-- label for override tip -->
    <string name="custom_tip">Custom tip</string>

    <!-- label for tip default % -->
    <string name="tip_default">15%</string>

    <!-- label for tip default 15% -->
    <string name="tip_low_default">15%</string>

    <!-- value for tip default 15 -->
    <integer name="tip_low_default_value">15</integer>

    <!-- label for tip default 18% -->
    <string name="tip_mid_default">18%</string>

    <!-- value for tip default 18 -->
    <integer name="tip_mid_default_value">18</integer>

    <!-- label for tip default 20% -->
    <string name="tip_high_default">20%</string>

    <!-- value for tip default 20 -->
    <integer name="tip_high_default_value">20</integer>

    <!-- simple label for total -->
    <string name="total">Total</string>

    <!--  label for grand total -->
    <string name="grand_total">Grand total</string>

    <!-- default hint value for grand total -->
    <string name="grand_total_hint_value">$27.50</string>

    <!-- label for Allocated Amount / Original Amount -->
    <string name="allocated_amt_original_amt">Allocated Amount / Original Amount</string>

    <!-- label for adding more people -->
    <string name="add_friend">+Friend</string>

    <!-- label for remaining subtotal in Detail Fragment -->
    <string name="subtotal_remaining">Subtotal remaining</string>

    <!--  label for remaining amount -->
    <string name="remaining_amount_label">Remaining amount</string>

    <!-- label for additional people names-->
    <string name="name">Name</string>

    <!-- label for items in detail activity-->
    <string name="item">Item</string>

    <!-- label for items in detail activity-->
    <string name="new_item">New item</string>

    <!--  label for empty item list -->
    <string name="no_items">Empty list</string>

    <!-- 35.00 / 80.00 -->
    <string name="format_accounted_vs_original"><xliff:g id="accounted">%1.2f</xliff:g> / <xliff:g id="original">%1.2f</xliff:g></string>

    <!-- 15 % -->
    <string name="format_tax_tip"><xliff:g id="percent">%1.1f</xliff:g> %%</string>

    <!-- $ 1.00 -->
    <string name="format_dollar_amount">$ <xliff:g id="amount">%1.2f</xliff:g></string>

    <!-- 1.00 -->
    <string name="format_amount"><xliff:g>%1.2f</xliff:g></string>

    <!-- Item # -->
    <string name="format_detail_item_label">
        <xliff:g>Item </xliff:g>
        <xliff:g id="position">%d</xliff:g>
    </string>

    <!-- Tip 15% -->
    <string name="format_text_pct_label">
        <xliff:g id="label">%s</xliff:g>
        <xliff:g id="pct">%1.0f</xliff:g>
        %%</string>

    <!-- Name total + tip -->
    <string name="format_share_name_total_tip">
        <xliff:g id="name">%s</xliff:g>
        <xliff:g id="subtotal_and_tax">$%1.2f</xliff:g>
        <xliff:g>+</xliff:g>
        <xliff:g id="tip">$%1.2f</xliff:g>
    </string>

    <!-- total + tip -->
    <string name="format_share_total_tip">
        <xliff:g id="subtotal_and_tax">$%1.2f</xliff:g>
        <xliff:g>+</xliff:g>
        <xliff:g id="tip">$%1.2f</xliff:g>
    </string>

    <!-- Total $1.00 -->
    <string name="format_text_amt_label">
        <xliff:g id="label">%s</xliff:g>
        <xliff:g id="amt">$%1.2f</xliff:g>
    </string>

    <!-- Label total + tip = total -->
    <string name="format_share_label_total_tip_final">
        <xliff:g id="label">%s</xliff:g>
        <xliff:g id="subtotal_and_tax">$%1.2f</xliff:g>
        <xliff:g>+</xliff:g>
        <xliff:g id="tip">$%1.2f</xliff:g>
        <xliff:g>=</xliff:g>
        <xliff:g id="final">$%1.2f</xliff:g>
    </string>

    <!--  Label + label -->
    <string name="format_two_labels">
        <xliff:g id="labelOne">%s</xliff:g>
        <xliff:g>+</xliff:g>
        <xliff:g id="labelTwo">%s</xliff:g>
    </string>
</resources>
